force-app/src/objects/cpm__DummyPSP_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__My_Password__c</fullName>
        <label>My Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Regular_input__c</fullName>
        <label>Regular input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Report_From__c</fullName>
        <label>Report From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Some_Number__c</fullName>
        <label>Some Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Settings</label>
</CustomObject>